--- a/config/database.yml
+++ b/config/database.yml
@@ -4,25 +4,31 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 
-# development:
-#   adapter: sqlite3
-#   database: db/development.sqlite3
-#   pool: 5
-#   timeout: 5000
-
 development:
-  adapter: sqlserver
-  dsn: gestion
-  mode: odbc
-  database: Gestion
-  username: dbaadmin
-  password: yeike
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
+
+# development:
+#   adapter: sqlserver
+#   dsn: gestion
+#   mode: odbc
+#   database: Gestion
+#   username: dbaadmin
+#   password: yeike
+
+# production:
+#   adapter: mysql2
+#   encoding: utf8
+#   database: gestion_production
+#   username: maxenz
+#   password: elmaxo
+#   host: 127.0.0.1
+#   port: 3306
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: gestion_production
-  username: maxenz
-  password: elmaxo
-  host: 127.0.0.1
-  port: 3306
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
