listo en shadow

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,10 @@ development:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  encoding: utf8
+  database: gestion_production
+  username: maxenz
+  password: elmaxo
+  host: 127.0.0.1
+  port: 3306
